# system-design-architecture

./: .gitignore  BENCHMARKS.md  CHEATSHEET.md  QUICKSTART.md  README.md  docker-compose.yml  go.mod  run-benchmarks.sh
01-improper-instantiation/: README.md
02-synchronous-io/: README.md
03-chatty-io/: README.md
04-no-caching/: README.md
05-busy-database/: README.md
06-retry-storm/: README.md
07-monolithic-persistence/: README.md
08-noisy-neighbor/: README.md
09-extraneous-fetching/: README.md
10-busy-frontend/: README.md
api-design/: 01-instagram-api-design.md  02-uber-api-design.md  03-figma-api-design.md  04-google-docs-api-design.md  05-whatsapp-api-design.md  06-youtube-api-design.md  07-spotify-api-design.md  08-netflix-api-design.md  09-twitter-api-design.md  10-discord-api-design.md  11-stripe-api-design.md  12-dropbox-api-design.md  13-slack-api-design.md  14-chatgpt-api-design.md  (+5 more)
caching-patterns/: .env.example  README.md  docker-compose.yml  init.sql  pyproject.toml  start.sh  stop.sh  test_patterns.py
caching-patterns/cache_aside/: main.py
caching-patterns/read_through/: main.py
caching-patterns/refresh_ahead/: main.py
caching-patterns/write_behind/: main.py
caching-patterns/write_through/: main.py
messaging-demo/: PATTERNS.md  README.md  main.py  pyproject.toml
messaging-demo/clients/: graphql_client.py  grpc_client.py  rest_client.py  websocket_client.py
messaging-demo/server/: event_bus.py  graphql_schema.py  grpc_server.py  main.py
messaging-demo/server/proto/: notify.proto  notify_pb2.py  notify_pb2_grpc.py
(+117 files in other folders)
