[project]
name = "messaging-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "httpx>=0.28.1",
    "redis>=7.4.0",
    "strawberry-graphql[fastapi]>=0.315.5",
    "uvicorn[standard]>=0.47.0",
    "websockets>=16.0",
]
